@@ -2405,93 +2405,208 @@ merge_fact(GEN *pa, GEN *pe, GEN b, GEN f)
   setlg(E, i);
 }
 
-/* Given a prime ideal factorization x with possibly zero or negative exponents,
- * and a vector w of elements of nf, gives a b such that
+static int
+isprfact(GEN x)
+{
+  long i, l;
+  GEN L, E;
+  if (typ(x) != t_MAT || lg(x) != 3) return 0;
+  L = gel(x,1); l = lg(L);
+  E = gel(x,2);
+  for(i=1; i<l; i++)
+  {
+    checkprid(gel(L,i));
+    if (typ(gel(E,i)) != t_INT) return 0;
+  }
+  return 1;
+}
+
+/* initialize projectors mod pr[i]^e[i] for idealchinese */
+static GEN
+pr_init(GEN nf, GEN fa, GEN w, GEN dw)
+{
+  GEN L = gel(fa,1), E = gel(fa,2);
+  long r = lg(L);
+
+  if (w && lg(w) != r) pari_err_TYPE("idealchinese", w);
+  if (r > 1)
+  {
+    GEN U, F;
+    long i;
+    if (dw)
+    {
+      GEN p = gen_indexsort(L, (void*)&cmp_prime_ideal, cmp_nodata);
+      GEN fw = idealfactor(nf, dw); /* sorted */
+      L = vecpermute(L, p);
+      E = vecpermute(E, p);
+      w = vecpermute(w, p);
+      merge_fact(&L, &E, gel(fw,1), gel(fw,2));
+      /* L and E lenghtened, with factors of dw coming last */
+    }
+    else
+      E = leafcopy(E); /* do not destroy fa[2] */
+
+    for (i=1; i<r; i++)
+      if (signe(gel(E,i)) < 0) gel(E,i) = gen_0;
+    F = factorbackprime(nf, L, E);
+    U = cgetg(r, t_VEC);
+    for (i = 1; i < r; i++)
+    {
+      GEN u;
+      if (w && gequal0(gel(w,i))) u = gen_0; /* unused */
+      else
+      {
+        GEN pr = gel(L,i), e = gel(E,i), t;
+        t = idealdivpowprime(nf,F, pr, e);
+        u = hnfmerge_get_1(t, idealpow(nf, pr, e));
+        if (!u) pari_err_COPRIME("idealchinese", t,pr);
+      }
+      gel(U,i) = u;
+    }
+    F = idealpseudored(F, nf_get_roundG(nf));
+    fa = mkvec2(F, U);
+  }
+  else
+    fa = cgetg(1,t_VEC);
+  return fa;
+}
+
+static GEN
+pl_normalize(GEN nf, GEN pl)
+{
+  const char *fun = "idealchinese";
+  if (lg(pl)-1 != nf_get_r1(nf)) pari_err_TYPE(fun,pl);
+  switch(typ(pl))
+  {
+    case t_VEC:
+      RgV_check_ZV(pl,fun);
+      pl = ZV_to_zv(pl);
+      /* fall through */
+    case t_VECSMALL: break;
+    default: pari_err_TYPE(fun,pl);
+  }
+  return pl;
+}
+
+static int
+is_chineseinit(GEN x)
+{
+  GEN fa, pl;
+  long l;
+  if (typ(x) != t_VEC || lg(x)!=3) return 0;
+  fa = gel(x,1);
+  pl = gel(x,2);
+  if (typ(fa) != t_VEC || typ(pl) != t_VEC) return 0;
+  l = lg(fa);
+  if (l != 1)
+  {
+    if (l != 3 || typ(gel(fa,1)) != t_MAT || typ(gel(fa,2)) != t_VEC)
+      return 0;
+  }
+  l = lg(pl);
+  if (l != 1)
+  {
+    if (l != 5 || typ(gel(pl,1)) != t_MAT || typ(gel(pl,2)) != t_MAT
+               || typ(gel(pl,3)) != t_COL || typ(gel(pl,4)) != t_VECSMALL)
+      return 0;
+  }
+  return 1;
+}
+
+/* nf a true 'nf' */
+static GEN
+chineseinit_i(GEN nf, GEN fa, GEN w, GEN dw)
+{
+  const char *fun = "idealchineseinit";
+  GEN nz = NULL, pl = NULL;
+  switch(typ(fa))
+  {
+    case t_VEC:
+      if (is_chineseinit(fa))
+      {
+        if (dw) pari_err_DOMAIN(fun, "denom(y)", "!=", gen_1, w);
+        return fa;
+      }
+      if (lg(fa) != 3) pari_err_TYPE(fun, fa);
+      /* of the form [x,s] */
+      pl = pl_normalize(nf, gel(fa,2));
+      fa = gel(fa,1);
+      nz = vecsmall01_to_indices(pl);
+      if (is_chineseinit(fa)) { fa = gel(fa,1); break; /* keep fa, reset pl */ }
+      /* fall through */
+    case t_MAT: /* factorization? */
+      if (isprfact(fa)) { fa = pr_init(nf, fa, w, dw); break; }
+    default: pari_err_TYPE(fun,fa);
+  }
+
+  if (pl)
+  {
+    GEN C, Mr, MI, lambda, mlambda;
+    GEN F = (lg(fa) == 1)? NULL: gel(fa,1);
+    long i, r;
+    Mr = rowpermute(nf_get_M(nf), nz);
+    MI = F? RgM_mul(Mr, F): Mr;
+    lambda = gmul2n(matrixnorm(MI,DEFAULTPREC), -1);
+    mlambda = gneg(lambda);
+    r = lg(nz);
+    C = cgetg(r, t_COL);
+    for (i = 1; i < r; i++) gel(C,i) = pl[nz[i]] < 0? mlambda: lambda;
+    pl = mkvec4(MI, Mr, C, pl);
+  }
+  else
+    pl = cgetg(1,t_VEC);
+  return mkvec2(fa, pl);
+}
+
+/* Given a prime ideal factorization x, possibly with 0 or negative exponents,
+ * and a vector w of elements of nf, gives b such that
  * v_p(b-w_p)>=v_p(x) for all prime ideals p in the ideal factorization
- * and v_p(b)>=0 for all other p, using the (standard) proof given in GTM 138.
- * Certainly not the most efficient, but sure. */
+ * and v_p(b)>=0 for all other p, using the standard proof given in GTM 138. */
 GEN
 idealchinese(GEN nf, GEN x, GEN w)
 {
+  const char *fun = "idealchinese";
   pari_sp av = avma;
-  long ty = typ(w), i, N, r;
-  GEN y, L, e, F, s, den;
-
-  nf = checknf(nf); N = nf_get_degree(nf);
-  if (typ(x) != t_MAT || lg(x) != 3)
-    pari_err_TYPE("idealchinese [not a factorization]",x);
-  L = gel(x,1); r = lg(L);
-  e = gel(x,2);
-  if (!is_vec_t(ty) || lg(w) != r) pari_err_TYPE("idealchinese",w);
-  if (r == 1) return scalarcol_shallow(gen_1,N);
-
-  w = Q_remove_denom(matalgtobasis(nf,w), &den);
-  if (den)
-  {
-    GEN p = gen_indexsort(L, (void*)&cmp_prime_ideal, cmp_nodata);
-    GEN fa = idealfactor(nf, den); /* sorted */
-    L = vecpermute(L, p);
-    e = vecpermute(e, p);
-    w = vecpermute(w, p); settyp(w, t_VEC); /* make sure typ = t_VEC */
-    merge_fact(&L, &e, gel(fa,1), gel(fa,2));
-    i = lg(L);
-    w = shallowconcat(w, zerovec(i - r));
-    r = i;
-  }
-  else
-    e = leafcopy(e); /* do not destroy x[2] */
-  for (i=1; i<r; i++)
-    if (signe(gel(e,i)) < 0) gel(e,i) = gen_0;
-
-  F = factorbackprime(nf, L, e);
-  s = NULL;
-  for (i=1; i<r; i++)
-  {
-    GEN u, t;
-    if (gequal0(gel(w,i))) continue;
-    t = idealdivpowprime(nf,F, gel(L,i), gel(e,i));
-    u = hnfmerge_get_1(t, idealpow(nf, gel(L,i), gel(e,i)));
-    if (!u) pari_err_COPRIME("idealchinese", t,gel(L,i));
-    t = nfmuli(nf, u, gel(w,i));
-    s = s? ZC_add(s,t): t;
-  }
-  if (!s) { avma = av; return zerocol(N); }
-  y = ZC_reducemodlll(s, F);
-  return gerepileupto(av, den? RgC_Rg_div(y,den): y);
-}
-
-GEN
-idealextchinese(GEN nf, GEN x, GEN y, GEN pl, GEN *pred)
-{
-  pari_sp av = avma;
-  GEN y0, G, I, red;
+  GEN x1, x2, s, dw;
 
   nf = checknf(nf);
-  y0 = idealchinese(nf, x, y);
-  I = factorbackprime(nf, gel(x,1), gel(x,2));
-  G = nf_get_roundG(nf);
-  red = ZM_mul(I,ZM_lll(ZM_mul(G,I), 0.99, LLL_IM));
-  y0 = ZC_reducemodmatrix(y0,red);
-  if (!nfispositive(nf, y0, pl))
+  if (!w) return gerepilecopy(av, chineseinit_i(nf,x,NULL,NULL));
+
+  if (typ(w) != t_VEC) pari_err_TYPE(fun,w);
+  w = Q_remove_denom(matalgtobasis(nf,w), &dw);
+  if (!is_chineseinit(x)) x = chineseinit_i(nf,x,w,dw);
+  /* x is a 'chineseinit' */
+  x1 = gel(x,1); s = NULL;
+  if (lg(x1) != 1)
   {
-    GEN nz = vecsmall01_to_indices(pl);
-    GEN Mr = rowpermute(nf_get_M(nf), nz);
-    GEN MI = RgM_mul(Mr,red);
-    GEN lambda = gmul2n(matrixnorm(MI,DEFAULTPREC), -1);
-    GEN C, sol, x0, mlambda = gneg(lambda);
-    long i, r, e;
-
-    r = lg(nz); C = cgetg(r, t_COL);
-    for (i = 1; i < r; i++) gel(C,i) = pl[nz[i]] < 0? mlambda: lambda;
-    C = RgC_sub(C, RgM_RgC_mul(Mr,y0));
-
-    sol = inverseimage(MI, C);
-    x0 = ZM_ZC_mul(red, grndtoi(sol, &e));
-    y0 = ZC_add(y0,x0);
+    GEN F = gel(x1,1), U = gel(x1,2);
+    long i, r = lg(w);
+    for (i=1; i<r; i++)
+      if (!gequal0(gel(w,i)))
+      {
+        GEN t = nfmuli(nf, gel(U,i), gel(w,i));
+        s = s? ZC_add(s,t): t;
+      }
+    if (s) s = ZC_reducemodmatrix(s, F);
   }
-  if (pred) *pred = red;
-  gerepileall(av, pred? 2: 1, &y0, pred);
-  return y0;
+  if (!s) { s = zerocol(nf_get_degree(nf)); dw = NULL; }
+
+  x2 = gel(x,2);
+  if (lg(x2) != 1)
+  {
+    GEN pl = gel(x2,4);
+    if (!nfchecksigns(nf, s, pl))
+    {
+      GEN MI = gel(x2,1), Mr = gel(x2,2), C = gel(x2,3);
+      GEN t = RgC_sub(C, RgM_RgC_mul(Mr,s));
+      long e;
+      t = grndtoi(RgM_RgC_invimage(MI,t), &e);
+      if (lg(x1) != 1) { GEN F = gel(x1,1); t = ZM_ZC_mul(F, t); }
+      s = ZC_add(s, t);
+    }
+  }
+  if (dw) s = RgC_Rg_div(s,dw);
+  return gerepileupto(av, s);
 }
 
 static GEN
