@@ -140,13 +140,17 @@
 [18, 9]~
 [-85124952/2401, 33204681/2401]~
 [249/2401, 1644/2401]~
-[-7, -14]~
-[14, 0]~
+[7, 14]~
+[0, 14]~
 [1, 0]
 [2, [0, -4]~]
 [3, [8/125, 0]~]
 [4, [0, 1]~]
+[9, 4]~
+[15, 4]~
+[-3, 4]~
+[-15, 4]~
 []
   *** nfinit: Warning: non-monic polynomial. Result of the form [nf,c].
 [[2, [0, 1]~, 2, 1, [0, -2; 1, 0]]]
-Total time spent: 8
+Total time spent: 12
